Switch to using minimal-test-theme-hugo-dfd
Signed-off-by: Daniel F. Dickinson <dfdpublic@wildtechgarden.ca>

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
-/public/
-/resources/
+public
+resources
 node_modules
 check-links.log
 .hugo_build.lock
 html-validate.log
-/src/public
-/src/resources
