--- a/.github/workflows/test-build-audit.yml
+++ b/.github/workflows/test-build-audit.yml
@@ -22,7 +22,7 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
-      - name: Run hugo-action-build-audit from src dir to public
+      - name: Run build-audit-action-hugo-dfd from src dir to public
         uses: ./
         with:
           source-directory: src
