--- a/action.yml
+++ b/action.yml
@@ -124,18 +124,25 @@ runs:
         OUTPUT_DIRECTORY: ${{ github.workspace }}/${{ inputs.output-directory }}
         SOURCE_DIRECTORY: ${{ inputs.code-directory }}/${{ inputs.repo-directory }}/${{ inputs.source-directory }}
       run: hugo --source "${SOURCE_DIRECTORY}" --destination "${OUTPUT_DIRECTORY}" --gc --cleanDestinationDir ${DO_MINIFY:+--minify}
-    - name: "Audit site for missed Hugo issues"
+    - name: "Audit site for missed Hugo issues (step 1)"
       shell: bash
       env:
         OUTPUT_DIRECTORY: ${{ github.workspace }}/${{ inputs.output-directory }}
-      run: if test "$(grep -iIvrnE 'grep(.+(-- raw HTML omitted --|ZgotmplZ|hahahugo|\\\[i18n\\\])+)' "${OUTPUT_DIRECTORY}" | grep -iIoE '<\!-- raw HTML omitted -->|ZgotmplZ|hahahugo|\[i18n\]')" != ""; then echo "not ok"; exit 1; else echo "ok"; exit 0; fi
+      run: grep -iIrnoE "<\!-- raw HTML omitted -->|ZgotmplZ|hahahugo|\[i18n\]|\(<nil>\)|(&lt;nil&gt;)" ${OUTPUT_DIRECTORY} >hugo-audit.log; RET=$?; if test "$RET" = "2"; then echo "not ok"; exit 1; fi
+    - name: "Audit site for missed Hugo issues (step 2)"
+      shell: bash
+      env:
+        OUTPUT_DIRECTORY: ${{ github.workspace }}/${{ inputs.output-directory }}
+      run: if test -s hugo-audit.log; then grep -iIvE "grep(.+(-- raw HTML omitted --|ZgotmplZ|hahahugo|\\\[i18n\\\]|\\\(<nil>\\\)|(&lt;nil&gt;))+)" hugo-audit.log; RET2=$?; if test "$RET2" != "1"; then echo "not ok"; exit 1; else echo "ok"; exit 0; else "ok"; exit 0; fi
     - name: "Build site omitting information needed only to audit"
       if: inputs.upload-site-as
       shell: bash
       env:
         DO_MINIFY: ${{ inputs.do-minify }}
         HUGO_CACHEDIR: ${{ inputs.code-directory }}/${{ inputs.hugo-cache-directory }}
+        HUGO_ENABLEMISSINGTRANSLATIONPLACEHOLDERS: "false"
         HUGO_ENV: ${{ inputs.hugo-env }}
+        HUGO_MINIFY_TDEWOLFF_HTML_KEEPCOMMENTS: "false"
         HUGO_RESOURCEDIR: ${{ inputs.code-directory }}/${{ inputs.repo-directory }}/resources
         OUTPUT_DIRECTORY: ${{ github.workspace }}/${{ inputs.output-directory }}
         SOURCE_DIRECTORY: ${{ inputs.code-directory }}/${{ inputs.repo-directory }}/${{ inputs.source-directory }}
