--- a/src/config.toml
+++ b/src/config.toml
@@ -2,17 +2,17 @@ baseURL = 'http://example.org/'
 languageCode = 'en-ca'
 title = 'Hugo action test site'
 theme = 'github.com/danielfdickinson/minimal-test-theme-hugo-dfd'
-copyright = '© 2021 Daniel F. Dickinson'
+copyright = '© 2021-2022 Daniel F. Dickinson'
 
 [taxonomies]
   tag = "tags"
 
 [author]
   name = "Daniel F. Dickinson"
-  homepage = "https://www.wildtechgarden.ca/"
+  homepage = "https://www.wildtechgarden.ca/about/"
   email = "dfdpublic@wildtechgarden.ca"
 
   [[ author.authors ]]
     name = "Daniel F. Dickinson"
-    homepage = "https://www.wildtechgarden.ca/"
+    homepage = "https://www.wildtechgarden.ca/about/"
     email = "dfdpublic@wildtechgarden.ca"
