Tweak README, LICENSE, and test site config
Signed-off-by: Daniel F. Dickinson <dfdpublic@wildtechgarden.ca>

--- a/src/config.toml
+++ b/src/config.toml
@@ -1,5 +1,5 @@
 baseURL = 'http://example.org/'
-languageCode = 'en-ca'
+languageCode = 'en'
 title = 'Hugo action test site'
 theme = 'github.com/danielfdickinson/minimal-test-theme-hugo-dfd'
 copyright = '© 2021-2022 Daniel F. Dickinson'
