--- a/.github/workflows/test-build-audit.yml
+++ b/.github/workflows/test-build-audit.yml
@@ -18,7 +18,19 @@ on:
       - '.vscode'
       - 'scripts'
 jobs:
+  check-source-code-validity:
+    runs-on: ubuntu-20.04
+    steps:
+      - uses: actions/checkout@v2
+      - name: "Verify content formatting validity (Markdown lint)"
+        uses: DavidAnson/markdownlint-cli2-action@v5
+        with:
+          globs: |
+            README.md
+            exampleSite/content/*.md
+            exampleSite/content/**/*.md
   audit-only:
+    needs: check-source-code-validity
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
@@ -27,6 +39,7 @@ jobs:
         with:
           source-directory: exampleSite
   create-artifact:
+    needs: check-source-code-validity
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
