Add base-url option for build
Signed-off-by: Daniel F. Dickinson <dfdpublic@wildtechgarden.ca>

--- a/.github/workflows/test-build-audit.yml
+++ b/.github/workflows/test-build-audit.yml
@@ -33,6 +33,7 @@ jobs:
       - name: Run build-audit-action-hugo-dfd from src dir to public
         uses: ./
         with:
+          base-url: https://example.com/
           source-directory: exampleSite
   create-artifact:
     needs: check-source-code-validity
